add portfolio.html file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title> Graham's Great Website </title>
         <style>
             body {
-                background: rgb(105, 188, 255);
+                background: hsl(207, 100%, 71%);
                 color: rgb(255, 255, 255);
                 padding: 10px;
                 font-family: arial;
