add portfolio.html file

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <main>
                 <!-- Sidebar section -->
                 <div class="sidebar">
-                    <img class="sidebar-img" src="https://mail.google.com/mail/u/0?ui=2&ik=cacf586f72&attid=0.1&permmsgid=msg-f:1734645622625122276&th=1812b300d3c1b7e4&view=fimg&fur=ip&sz=s0-l75-ft&attbid=ANGjdJ-96UPuy4S6mIUzNn4WskRrWha37fM0LSbALi8ePmu8M06LiZXfQbLnEtMgbD9NOn9JzzBFMBnnz_w29e_xwIzumyBZ2NDuwBg6nKN1VpHbu75NnT384JlxXfM&disp=emb&realattid=f5193bde9f8a1464_0.1.1">
+                    <img class="sidebar-img" src="https://lh3.googleusercontent.com/iA60fKKrBTZNRiJPJOoRygnCwoIRmVJa_6cKthb9KCC_GtjZK1BT4oS87N8DSkDKvIFC_kFe0ce15OmajZPb3D6udNC3IOF_zQVGhTxLGp5Xh67eZp-mVGG7EV7vA_tV7_D39QgM86PFprvHlerZMB2_G_hmjV3x7MljWi_Hezj1vAEnc32cUYYAA0wWlX_ma5Z30Je1K7wbV2LCfgKNwBzd7r0IklrVCcNDisDPglXo22h6dJgGNZsssxKpklR2h2K06Xndt98uLD8BWmSOIIEGIBh5VQg6az9Xsc7GeXLLgrECNtg-egDZfKTlR8-CJiE9NHzspAq3gcN1nN0rj--4Ok2ZQoTPbRegrl7Cl52ATdEmvsgzW-Ly_BT0NwVd3FNjRErNew6JCIijbsXiOjmLGHAjeyog5aYLwDz64yeXAohcg3Iw39CI7kCnwgonxGYmQyTArppWecuuYf6gIdCxy2x2dubJLl_6CrmeSDoPIMxaWDphgSQGKT4Aapxq6pvMr_6LQDunJkmYKf4nQXWlg2fcX9VNzJ6NtLQQ2vKKQyOGDm8TuA_7OyJDmBGWcsGpoNw_515fVDthE_M6JZCXjz3oDkx7tE010gp2qhrtyDQM-9lcXmT_MNI1A98REgu29ib1VovwgHshcvPoB4SwxmL49jBa3XgIUMii1LwueEhtPfr49BZLHXWIIfbKpkVuhs4b6ngHT6d0bkNV3TUq4dIRP5VbVPuPi7Xw1dTDH41w11DEM7GFFQ=w522-h695-no?authuser=0">
                 </div>
                 <!-- Content section -->
 
