--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -14,7 +14,7 @@
 			display: block;
 			position: absolute;
 			top: 100px;
-			left: 0px;  /* <--- Change me! */
+			left: 300px;  /* <--- Change me! */
 		}
 		.board{
 			height: 100vh;
@@ -62,16 +62,24 @@
 			
 			// TODO 2 - Variable declarations 
 			
-
-			
+			var positionX = 0;
+			var points = 0;
+			var speed = 10;
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
 			it should move the Box to a new location. If the box drifts off the screen
 			turn it around! 
 			*/
 			function update() {
-				
-
+				/* Your Code to Increase positionX by 10 HERE*/
+				positionX = positionX + speed;
+				moveBoxTo(positionX);
+				if (positionX > boardWidth){
+					speed = -speed
+				}
+				if (positionX < 0){
+					speed = -speed 
+				}
 			};
 
 			/* 
@@ -80,8 +88,15 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-				
-
+				positionX = 0;
+				points = points + 1;
+				if (speed > 0){
+					speed += 3
+				}
+				else if (speed < 0){
+					speed -= 3
+				}
+				changeBoxText(points);
 
 			};
 		})();
